# gaussmap

./: .gitignore  LICENSE  README.md  gaussmap.ipynb  pyproject.toml  run-scene
.github/workflows/: ci.yml
gaussmap/: parameterizations.py  scene.py  typing.py
gaussmap/objects/: surfaces.py  vector_field.py
gaussmap/utils/: parameterization_input.py  utils.py
scenes/: catenoid_scene.py  cone_scene.py  custom_scene.py  cylinder_scene.py  hyperbolic_paraboloid_scene.py  hyperboloid_scene.py  monkey_saddle_scene.py  paraboloid_scene.py  ring_torus_scene.py  sphere_scene.py
tests/: test_scene.py
tests/objects/: test_surfaces.py  test_vector_field.py
tests/utils/: test_parameterization_input.py  test_utils.py
